tests/cases/errors/compile_extra_tokens.lox
// After parsing 1+2, the compiler expects a `;` but sees `3`.
// expect compile error: Expect ';' after expression
1 + 2 3;
